Separates responsibilities - Loading vs Consuming Closes #1