@@ -26,6 +26,11 @@ $ cd monitor.observer.alpha
 $ javac --module-path ../mods -d ../classes/monitor.observer.alpha src/main/java/monitor/observer/alpha/*.java src/main/java/module-info.java
 ```
 
+```
+$ cd monitor.observer.beta
+$ javac --module-path ../mods -d ../classes/monitor.observer.beta src/main/java/monitor/observer/beta/*.java src/main/java/module-info.java
+```
+
 ### Package
 
 ```
@@ -33,4 +38,17 @@ $ cd /c/dev/projects/jigsaw/service.monitor
 $ jar -cvf mods/monitor.observer.jar -C classes/monitor.observer .
 $ jar -v --create --file mods/monitor.jar --main-class monitor.Main -C classes/monitor .
 $ jar -cvf mods/monitor.observer.alpha.jar -C classes/monitor.observer.alpha .
+```
+
+### Run
+```
+$ java --module-path mods --module monitor
+```
+
+### Excluding Services with ``` --limit-modules ```
+
+```
+$ java --module-path mods --limit-modules monitor --module monitor
+$ java --module-path mods --limit-modules monitor --add-modules monitor.observer.alpha --module monitor
+$ java --module-path mods --limit-modules monitor --add-modules monitor.observer.beta --module monitor
 ```
